--- a/bower.json
+++ b/bower.json
@@ -16,6 +16,9 @@
     "angular": "~1.4.8",
     "satellizer": "~0.13.1",
     "jquery": "~2.1.4",
-    "angular-ui-router": "ui-router#~0.2.15"
+    "angular-ui-router": "ui-router#~0.2.15",
+    "bootstrap-social": "~4.12.0",
+    "bootstrap": "~3.3.6",
+    "font-awesome": "~4.5.0"
   }
 }
